--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     alt=""
                   />
                 </figure>
-                <div class="book_title">cant Hurt Me</div>
+                <div class="book_title">Cant Hurt Me</div>
                 <div class="book_ratings">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -348,9 +348,9 @@
             </figure>
           </a>
           <div class="footer_list">
-            <a href="" class="footer_link">Home</a>
+            <a href="#" class="footer_link">Home</a>
             <a href="" class="footer_link-no-cursor">About</a>
-            <a href="" class="footer_link">Books</a>
+            <a href="#features" class="footer_link">Books</a>
             <a href="" class="footer_link-no-cursor">Contact</a>
           </div>
           <div class="footer_copyright">Copyright &copy; 2021 Library</div>
