--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Library</title>
     <link rel="stylesheet" href="./style.css" />
-    <script src="https://kit.fontawesome.com/c8e4d183c2.js"crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/c8e4d183c2.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="index.js"></script>
-
   </head>
   <body>
     <section id="landing">
@@ -20,23 +22,25 @@
             <li><a href="#" class="nav_link">Contact</a></li>
             <li><a href="#" class="nav_link nav_link-primary">Books</a></li>
           </ul>
-        </div>
-        <button class="btn_menu" onclick="openMenu()">
-          <i class="fas fa-bars"></i>
-        </button>
-        <div class="menu_backdrop">
-          <button class="btn _menu btn_menu-close" onclick="closeMenu()">
-            <i class="fas fa-times"></i>
+          <button class="btn_menu" onclick="openMenu()">
+            <i class="fas fa-bars"></i>
           </button>
-          <ul class="menu_links">
-            <li class=menu_list>
-              <a href="#" class="menu_link">Home</a>
-            <li class=menu_list>
-              <a href="#features" class="menu_link">Books</a>
-            <li class=menu_list>
-              <a href="#" class="menu_link no_cursor">Contacts</a>
-            </li>
-          </ul>
+          <div class="menu_backdrop">
+            <button class="btn_menu btn_menu-close" onclick="closeMenu()">
+              <i class="fas fa-times"></i>
+            </button>
+            <ul class="menu_links">
+              <li class="menu_list">
+                <a href="#" class="menu_link">Home</a>
+              </li>
+              <li class="menu_list">
+                <a href="#features" class="menu_link">Books</a>
+              </li>
+              <li class="menu_list">
+                <a class="menu_link no_cursor">Contacts</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </nav>
       <header>
@@ -46,11 +50,11 @@
             <h2>
               Find your dream book with <span class="purple">Library</span>
             </h2>
-            
+
             <a href="#features">
               <button class="btn">Browse books</button>
             </a>
-            </div>
+          </div>
           <figure class="header_img-wrapper">
             <img src="./assets/Undraw_Books.svg" alt="" />
           </figure>
@@ -332,7 +336,7 @@
               Explore more <span class="purple">Books</span>
             </h2>
             <a href="#features">
-            <button class="btn">Browse Books</button>
+              <button class="btn">Browse Books</button>
             </a>
           </div>
         </div>
